add - edit validation added, list - menu opt init

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,10 @@
 .header {
     // display: block;
-    position: static;
-    background-color: rgb(7, 7, 160);
-    height: 10vh;
+    background-color: #182d4a;
+    height: 4vh;
     padding: 1em;
-    font-size: larger;
     color: white;
     position: static;
-    width: 100vw;
+    //font-size: larger;
+    //width: 100vw;
 }
