--- a/src/app/components/add-edit-ticket/add-edit-ticket.component.scss
+++ b/src/app/components/add-edit-ticket/add-edit-ticket.component.scss
@@ -3,7 +3,7 @@
     h3 {
         padding: 0.7em;
         margin-bottom: 0px;
-        
+        margin-left: 2em;
     }
 }
 // .title {
@@ -65,6 +65,7 @@
         width: 12em;
         border: 2px;
         padding: 0.5em;
+        cursor: pointer;
     }
 
     .cancel {
@@ -76,6 +77,16 @@
         width: 12em;
         border: 1px solid #222222;
         padding: 0.5em;
+        cursor: pointer;
+    }
+    .disable {
+        background-color: gray;
+    }
+    .disable:hover {
+        cursor: not-allowed;
+    }
+    .disable:active {
+        pointer-events: none;
     }
 }
 .container {
